# cloud-build-samples

./: .gitignore  CODEOWNERS  LICENSE  README.md  aaa  bablu  bbbbb  build-sample.cloudbuild.yaml  index.js  node-example-yarn  oooo  package-lock.json  pom.xml  renovate.json  test.js  test.txt
.github/: trusted-contribution.yml
basic-config/: Dockerfile  README.md  cloudbuild.json  cloudbuild.yaml  test.cloudbuild.yaml
deploy-firebase-example/: README.md  cloudbuild.yaml  test.cloudbuild.yaml
golang-sample/: Dockerfile  README.md  cloudbuild.yaml  go.mod  main.go  test.cloudbuild.yaml
gradle-example/: Dockerfile  README.md  build.gradle  cloudbuild.yaml  settings.gradle  test.cloudbuild.yaml
maven-example/: Dockerfile  README  README.md  cloudbuild.yaml  pom.xml  test.cloudbuild.yaml
maven-example-noncontainer/: Dockerfile  README.md  cloudbuild.yaml  pom.xml  test.cloudbuild.yaml
mig-blue-green/: README.md  setup.sh  teardown.sh
multiple-node-versions-example/: README.md  cloudbuild.yaml  index.js  package-lock.json  package.json  test.cloudbuild.yaml
node-example-npm/: README.md  README.ms  cloudbuild.yaml  index.js  package-lock.json  package.json  test.js
node-example-yarn/: README.md  cloudbuild.yaml  index.js  package-lock.json  package.json  test.js
private-pool/: README.md  cloudbuild.yaml
private-pools-example/: README.md  cloudbuild.yaml  privatepool.yaml
python-example-noncontainer-artifacts/: README.md  cloudbuild.yaml  pyproject.toml  test.cloudbuild.yaml
python-example-noncontainer-artifacts/src/: main.py  main_test.py
(+64 files in other folders)
